JavaScript Module 1 Class 2

--- a/javascript/1-1/2-operators/1-comparison.html
+++ b/javascript/1-1/2-operators/1-comparison.html
@@ -33,9 +33,54 @@
     const isLargerThanOrEqual = a >= b; // false
     const isLessThanOrEqual =   a <= b; // true
 
+    // console.log(
+    //     36 >  36, // false
+    //     36 <  36, // false
+    //     36 >= 36, // true
+    //     36 <= 36. // true
+    // );
+
 
     const weight = 70;
 
-    const isBetweenAllowedLiftWeight = weight >= 30 && weight <= 100;
+    // 30 <= weight <= 100
+
+    const isBetweenAllowedLiftWeight = (weight >= 30) && (weight <= 100);
+
+</script>
+
+<script>
+
+    console.log(5 > 4);                     // true
+
+    console.log(10 >= '7');                 // true
+
+    console.log(10 >= '77');                // false
+
+    console.log('2' > '12');                // true
+
+    console.log('2' < '12');                // false
+
+    console.log('4' == 4);                  // true
+
+    console.log('6' === 6);                 // false
+
+    console.log('false' === false);         // false
+
+    console.log(1 == true);                 // true
+
+    console.log(1 === true);                // false
+
+    console.log('0' == false);              // true
+
+    console.log('0' === false);             // false
+
+    console.log('Papaya' < 'papaya');       // true
+
+    console.log('Papaya' === 'papaya');     // false
+
+    console.log(undefined == null);         // true
+
+    console.log(undefined === null);        // false
 
 </script>
